--- a/HTML/assets/sys.css
+++ b/HTML/assets/sys.css
@@ -3,10 +3,12 @@
 	margin: 0;
 	box-sizing: border-box;
 }
-body{
-  background-color: #ffdac4;
 
+
+body{
+      background-color: #d9d9d9;
 }
+
 
 body{
     font-family: 'Poppins', sans-serif;
