--- a/HTML/assets/styling.css
+++ b/HTML/assets/styling.css
@@ -133,6 +133,8 @@ form{
 }
 .image{
     width: 100%;
+    margin-bottom: 20px;
+    bottom: 5px;
 }
 form.sign-in-form{
     z-index: 2;
@@ -144,7 +146,7 @@ form.sign-in-form{
     position: absolute;
     width:100%;
     height:100%;
-    top:0;
+    top: 2px;
     left:0;
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -161,6 +163,8 @@ form.sign-in-form{
 
 .panel .content{
     color: #fff;
+    
+    
 }
 .panel h3{
     font-weight: 600;
@@ -176,4 +180,11 @@ form.sign-in-form{
     height: 41px;
     font-weight: 600;
     font-size: 0.8rem;
+}
+.txt{
+    margin-bottom: 2px;
+}
+
+.imi{
+    bottom: 5px;
 }
