--- a/HTML/assets/designmenu.css
+++ b/HTML/assets/designmenu.css
@@ -66,13 +66,13 @@ a{
     top:14px;
     font-size: 20px;
     text-align: center;
-    color: rgb(48, 211, 89);
+    color: #20dbc2;
 }
 .nav-item{
     position: relative;
     top:12px;
     margin-left: 10px;
-    color: rgb(48, 211, 89);
+    color:#20dbc2;
 }
 a:hover{
     background-color: burlywood;
