--- a/HTML/assets/style2.css
+++ b/HTML/assets/style2.css
@@ -428,3 +428,226 @@ section{
     background-image: linear-gradient(45deg,#bca89f,#d8cbc4);
 
   }
+  @import url('https://fonts.googleapis.com/css2? family=poppins:wght@300;400;600;700&display=swap');
+*
+{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+}
+
+input{
+    font-family:'poppins',  sans-serif;
+}
+.container{
+    position: relative;
+    width:100%;
+    background-color: #fff;
+    min-height: 100vh;
+    overflow: hidden;
+}
+.forms-container{
+    position:absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+}
+.container::before{
+    content:'';
+    position: absolute;
+    height: 2000px;
+    width: 2000px;
+    top: -10%;
+    right: 48%;
+    background-image: linear-gradient(45deg,#e5d3b3,#967f74);
+    transform: translateY(-50%);
+    border-radius: 50%;
+    z-index:6;
+    transition: 1.8s ease-in-out;
+}
+form{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 5rem;
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+.title{
+    font-size: 5rem;
+    color: #967f74;
+    margin-bottom: 10px;
+}
+.input-field{
+    max-width: 380px;
+    width: 100%;
+    height: 55px;
+    background-color: #f0f0f0;
+    margin: 10px 0;
+    border-radius: 55px;
+    display: grid;
+    grid-template-columns: 15% 85%;
+    padding:0 0.4rem;
+    position: relative;
+}
+.input-field i{
+    text-align: center;
+    line-height: 55px;
+    color: #acacac;
+    font-size: 1.5rem;
+}
+.input-field input{
+    background: none;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 600;
+    font-size: 1.2rem;
+    color: #333;
+    width: 220px;
+}
+.input-field input:placeholder-shown{
+    color: #aaa;
+    font-weight: 500;
+}
+.btn{
+    width: 150px;
+    height: 49px;
+    outline: none;
+    border: none;
+    border-radius: 48px;
+    background-image: linear-gradient(45deg,#9c6644, #8b6c5c);
+    color: white;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin: 10px 0;
+    transition: all 0.5s;
+    text-align: center;
+}
+.btn:hover{
+    background-color:#acacac;    
+}
+.social-text{
+    padding: 0.7rem 0;
+}
+.social-media{
+    display: flex;
+    justify-content: center;
+}
+.social-icon{
+    height: 46px;
+    width: 46px;
+    border: 1px solid #333;
+    margin: 0 0.45rem;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #333;
+    font-size: 1.3rem;
+    border-radius: 50%;
+    transition: all 0.5s;
+}
+.social-icon:hover{
+    color: #20dbc2;
+    border-color: #00bfa6;
+}
+.signin-signup{
+    position: absolute;
+    top: 50%;
+    left: 75%;
+    transform: translate(-50%,-50%);
+    display: grid;
+    grid-template-columns: 1fr;
+    z-index: 5;
+}
+.image{
+    width: 100%;
+    margin-bottom: 20px;
+    bottom: 5px;
+}
+form.sign-in-form{
+    z-index: 2;
+}
+
+
+
+.panels-container{
+    position: absolute;
+    width:100%;
+    height:100%;
+    top: 2px;
+    left:0;
+    display: flex;
+    grid-template-columns: repeat(2,1fr);
+}
+.panel{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: center;
+    text-align: center;
+    z-index: 7;
+}
+
+
+.panel .content{
+    color: #fff;
+    
+    
+}
+.panel h3{
+    font-weight: 600;
+    line-height: 1;
+    font-size: 1.5rem;
+}
+
+.btn.transparent{
+    margin:0;
+    background: none;
+    border:2px solid #fff;
+    width:130px;
+    height: 41px;
+    font-weight: 600;
+    font-size: 0.8rem;
+}
+.txt{
+    margin-bottom: 2px;
+}
+
+.btn1{
+    width: 150px;
+    height: 49px;
+    outline: none;
+    border: none;
+    border-radius: 48px;
+    background-color: #fff;
+    color:#acacac ;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin: 10px 0;
+    transition: all 0.5s;
+}
+
+.btn1:hover{
+    background-color: #fff;    
+}
+btn1.transparent{
+    margin:0;
+    background: none;
+    border:2px solid rgb(85, 82, 82);
+    width:130px;
+    height: 41px;
+    font-weight: 600;
+    font-size: 0.8rem;
+}
+
+body{
+    overflow: hidden;
+}
+.link_btn{
+    text-decoration: none;
+    color: white;
+}
