--- a/HTML/assets/style.css
+++ b/HTML/assets/style.css
@@ -1,101 +1,74 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
-header .header{
-  background-color: #fff;
-  height: 45px;
-}
-p{
-  color:#987554;
-}
-h3{
-  color: #664229;
-  font-size: 28px;
-}
-header a img{
-  width: 134px;
-margin-top: 4px;
-float: left;
-}
-.login-page {
-  width: 360px;
-  padding: 8% 0 0;
-  margin: auto;
-}
-.login-page .form .login{
-  margin-top: -31px;
-margin-bottom: 26px;
-}
-.form {
-  position: relative;
-  border-radius: 20px;
-  /* z-index: 1; */
-  background: #FFFFFF;
-  max-width: 360px;
-  margin: 0 auto 100px;
-  padding: 45px;
-  text-align: center;
-  box-shadow: 0 0 20px 0 rgb(122, 119, 119), 0 5px 5px 0 #616161fb;
-}
-.form input {
-  font-family: "Roboto", sans-serif;
-  outline: 0;
-  background: #f2f2f2;
-  border-radius: 20px;
-  width: 100%;
-  border: 0;
-  margin: 0 0 15px;
-  padding: 15px;
-  box-sizing: border-box;
-  font-size: 14px;
-}
-.form button {
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  outline: 0;
-  border-radius: 20px;
-  background-image: linear-gradient(45deg,#9c6644, #8b6c5c);
-  width: 100%;
-  border: 0;
-  padding: 15px;
-  color: #FFFFFF;
-  font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-  cursor: pointer;
-}
-.form .message {
-  margin: 15px 0 0;
-  color: #b3b3b3;
-  font-size: 12px;
-}
-.form .message a {
-  color: #8b6c5c;
-  text-decoration: none;
-}
-
+*
 .container {
-  position: relative;
-  z-index: 1;
-  max-width: 300px;
-  margin: 0 auto;
-}
-
-body {
-  /* background-color: #328f8a; */
- background-image: linear-gradient(45deg,#e5d3b3,#967f74);
- font-family:'poppins',  sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-repeat: no-repeat;
-  display: flex;
-  background-position:center ;
-  background-size: cover;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 1.5em;
+  }
   
-}
-
-.title{
-  padding-top: 55px;
-  margin-left: 5px;
-  color: #664229;
-  right: 0;
-}
+  .menu {
+    font-family: "Inter", sans-serif;
+    font-size: 14px;
+  }
+  
+  body{
+    background-color: #fddbc9;
+  }
+  .menu-group-heading {
+    margin: 0;
+    padding-bottom: 1em;
+    border-bottom: 2px solid #ccc;
+    text-align: center;
+     font-size: xx-large;
+  }
+  
+  .menu-group {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1.5em;
+    padding: 1.5em 0;
+  }
+  
+  .menu-item {
+    display: flex;
+  }
+  
+  .menu-item-image {
+    width: 80px;
+    height: 80px;
+    flex-shrink: 0;
+    object-fit: cover;
+    margin-right: 1.5em;
+  }
+  
+  .menu-item-text {
+    flex-grow: 1;
+  }
+  
+  .menu-item-heading {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+  }
+  
+  .menu-item-name {
+    margin-right: 1.5em;
+  }
+  
+  .menu-item-description {
+    line-height: 1.6;
+  }
+  
+  @media screen and (min-width: 992px) {
+    .menu {
+      font-size: 16px;
+    }
+  
+    .menu-group {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  
+    .menu-item-image {
+      width: 125px;
+      height: 125px;
+    }
+  }
