--- a/HTML/assets/design.css
+++ b/HTML/assets/design.css
@@ -13,8 +13,9 @@
 
 body{
     font-size: 14px;
-    background:#f2f2f2;
+    background-image: linear-gradient(45deg,#9c6644, #8b6c5c);
 }
+
 .container
 {
     display: flex;
@@ -24,7 +25,7 @@ body{
     display: block;
     padding:25px;
     margin:10px auto 0;
-    border-top:5px solid #476930;
+    border-top:5px solid #c18c5d ;
     box-shadow:0 0 7px 5px rgba(0,0,0,0.5);
 }
 .container h2{
