--- a/HTML/assets/bookdesign.css
+++ b/HTML/assets/bookdesign.css
@@ -1,104 +1,27 @@
-@import url('https://fonts.googleapis.com/css2? family=poppins:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 *{
-   
-    margin:0;
-    padding: 0;
-    font-family: "Poppins",sans-serif;
-    box-sizing:border-box;
-    border: none;
-    outline: none;
-    color: #5e3b29;
-   }
-   h1{
-    text-align:center;
-    color:#5e3b29;
-    padding:20px;
-   }
-  
-  
-  .menu {
-    padding:0 10px 30px 10px;
-    display:grid;
-    grid-template-columns: repeat(auto-fit,minimax(350px,1fr));
-    grid-gap:20px 40px;
-  }
-  .heading{
-    background-color:#bca89f;
-    color:#ffffff;
-    margin-bottom:30px;
-    padding:30px 0;
-    grid-column:1/-1;
-    text-align:center;
-  }
- .items{
-  display: grid;
-  grid-template-columns:repeat(3,1fr);
-  padding:30px 20px;
-  grid-column-gap:30px;
-  grid-row-gap:30px
- }
- .items img{
-  width:100%;
-  height:300px;
-  object-fit:cover;
-  cursor:pointer;
-  transition:0.2s ease;
- }
- .item img:hover{
-  transform:scale(1.04);
- }
- .item h4{
-  padding:5px;
-  text-align:center;
- }
- .item button{
-  padding:5px 30px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins",sans-serif;
   border:none;
-  outline:none;
-  background-image: linear-gradient(45deg,#9c6644, #8b6c5c);
-  color:white;
-  cursor:pointer;
-  border-radius:4px;
-  display:block;
-  margin:0 auto;
-  transition:0.2s all;
-}
-.item button:hover{
-  transform:scale(1.08);
-}
-@media screen and (max-width:1000px){
-  .items{
-    grid-template-columns:repeat(2,1fr);
-
-  }
-}
-@media screen and (max-width:768px){
-  .items{
-    grid-template-columns:repeat(1,1fr);
-    
-  }
-}
-#boxshadow 
-{     
-border: 3px solid pink;
-box-shadow: 5px 6px hotpink; 
+  outline: none;
 }
 body{
   position: relative;
   min-height: 100vh;
   width: 100%;
-  overflow: scroll;
-   background-image: linear-gradient(45deg,#bca89f,#d8cbc4); 
-   background-color: #5e3b29;
-
+  overflow: hidden;
+  background-image: linear-gradient(45deg,#e5d3b3,#967f74);
 }
+
 .sidebar{
   position: fixed;
   top:0;
   left: 0;
   height: 100%;
   width: 20px;
-  background-color: #fff;
+  background: #fff;
   padding:6px 14px;
   transition: all 0.5 ease;
   z-index: 1;
@@ -168,7 +91,7 @@ body{
   border-radius:6px;
   height: 35px;
   width: 155px;
-  background-color: #fff;
+  background: #fff;
   line-height: 40px;
   text-align: left;
  box-shadow: 0 5px 10px rgba(167, 32, 32, 0.2);
@@ -191,7 +114,7 @@ body{
   border-radius:6px;
   height: 35px;
   width: 155px;
-  background-color: #fff;
+  background: #fff;
   line-height: 35px;
   text-align: center;
  box-shadow: 0 5px 10px rgba(167, 32, 32, 0.2);
@@ -221,7 +144,7 @@ body{
   border-radius: 12px;
   outline: none;
   border:none;
-  background-color: #fff;
+  background: #fff;
   padding-left: 50px;
   font-size: 18px;
   color: #765341;
@@ -243,7 +166,7 @@ i{
 
 .sidebar ul li a:hover{
   color: #fff;
-  background-color: #765341;
+  background: #765341;
   border-radius: 12px;
 
 }
@@ -283,12 +206,128 @@ i{
   
 }
 .home_content{
+  margin-left:80px;
   position: absolute;
   height: 100%;
   width: calc(100%-300px);
   left:300px;
 }
-.separate{
+
+
+
+
+.container
+{
   
-  margin-left: 100px;
+    display: flex;
+    background:white;
+    width: 700px;
+    height: auto;
+    display: block;
+    padding:25px;
+    margin:10px auto 0;
+    border-top:5px solid #c18c5d ;
+    box-shadow:0 0 7px 5px rgba(0,0,0,0.5);
 }
+.container h2{
+    font-size:24px;
+    line-height:24px;
+    padding:30px;
+    text-align: center;
+}
+
+ button{
+  background-image: linear-gradient(45deg,#9c6644, #8b6c5c);
+        color: #f0f0f0;
+        border: none;
+        outline: none;
+        text-transform: uppercase;
+        transition: all 0.5s;
+        margin:10px 0;
+        width: 150px;
+        height: 49px;
+        text-align:center;
+        border-radius:30px;
+        width:50%;
+        
+}
+
+ 
+
+    button:hover{
+      background:#e5d3b3;
+      color: #765341;
+    }
+
+    /* div{
+      margin:100px;
+      
+  } */
+  input{
+      font-family:"Poppins",sans-serif;
+      width: fit-content;
+  }
+  form{
+      display:flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 0 5rem;
+      grid-column: 1/2;
+      grid-row: 1/2;
+  }
+  
+  .input-field{
+      max-width: 380px;
+      width: 100%;
+      height: 55px;
+      background-color: #f0f0f0;
+      margin: 10px 0;
+      border-radius: 55px;
+      display: grid;
+      grid-template-columns: 15% 85%;
+      padding:0 0.4rem;
+      position: relative;
+  }
+  .input-field i{
+      text-align: center;
+      line-height: 55px;
+      color: #acacac;
+      font-size: 1.5rem;
+  }
+  .input-field input{
+      background: none;
+      outline: none;
+      border: none;
+      line-height: 1;
+      font-weight: 600;
+      font-size: 1.2rem;
+      color: #333;
+  }
+  .input-field input:placeholder-shown{
+      color: #aaa;
+      font-weight: 500;
+  }
+  
+  .btn.transparent{
+      margin:0;
+      background: none;
+      border:2px solid #fff;
+      width:130px;
+      height: 41px;
+      font-weight: 600;
+      font-size: 0.8rem;
+  }
+  body{
+    overflow: auto;
+  }
+  .link_btn{
+    text-decoration: none;
+    color: white;
+    
+}
+.link_btn:hover{
+    background:#e5d3b3;
+      color: #765341;
+}
+
