--- a/HTML/assets/style2.css
+++ b/HTML/assets/style2.css
@@ -428,7 +428,36 @@ section{
     background-image: linear-gradient(45deg,#bca89f,#d8cbc4);
 
   }
-  .body .icon .input-field{
+  .container{
+    position: relative;
+    width:100%;
+    background-color: #fff;
+    min-height: 100vh;
+    overflow: hidden;
+}
+
+.forms-container{
+    position:absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+}
+form{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 5rem;
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+.title{
+    font-size: 2.2rem;
+    color: #444;
+    margin-bottom: 10px;
+}
+.input-field{
     max-width: 380px;
     width: 100%;
     height: 55px;
@@ -440,19 +469,26 @@ section{
     padding:0 0.4rem;
     position: relative;
 }
-.body .icon .input-field i{
+.input-field i{
     text-align: center;
     line-height: 55px;
     color: #acacac;
     font-size: 1.5rem;
 }
-  .body .icon .input-field input{
-      background: none;
-      outline: none;
-      border: none;
-      line-height: 1;
-      font-weight: 600;
-      font-size: 1.2rem;
-      color: #333;
-  }
-  
+.input-field input{
+    background: none;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 600;
+    font-size: 1.2rem;
+    color: #333;
+}
+.input-field input:placeholder-shown{
+    color: #aaa;
+    font-weight: 500;
+}
+.about .body{
+  background-image: linear-gradient(45deg,#bca89f,#d8cbc4);
+
+}
