--- a/HTML/assets/status.css
+++ b/HTML/assets/status.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;1,200;1,300&display=swap');
-:root{
+/* :root{
     --main-color:#443;
     --border-radius:95% 4% 97% 5%/4% 94% 3% 95%;
     --border-radius-hover:4% 95% 6% 95%/95% 4% 92% 5%;
-    --border:.2rem solid var(--main-color);
-}
-*{
+    --border:.2rem solid var(--main-color); 
+} */
+/* *{
     font-family: 'Poppins',sans-serif;
     margin:0;
     padding:0;
@@ -15,12 +15,15 @@
     text-decoration: none;
     text-transform: capitalize;
     transition: all .2s linear;
-}
+
+} */
+
 html{
-    font-size: 62.5%;
+    
     overflow-x: hidden;
     scroll-padding-top: 7rem;
     scroll-behavior: smooth;
+    background-image: linear-gradient(45deg,#bca89f,#caae9f);
 }
 section{
     padding: 2rem 9%;
@@ -28,7 +31,6 @@ section{
 .container{
     position: relative;
     width:100%;
-    background-color: #fff;
     min-height: 100vh;
     overflow: hidden;
 }
@@ -50,7 +52,7 @@ form{
 }
 .title{
     font-size: 2.2rem;
-    color: #444;
+    color: #5e3b29;
     margin-bottom: 10px;
 }
 .input-field{
@@ -78,9 +80,223 @@ form{
     line-height: 1;
     font-weight: 600;
     font-size: 1.2rem;
-    color: #333;
+    color: rgb(36, 35, 35);
 }
 .input-field input:placeholder-shown{
     color: #aaa;
     font-weight: 500;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins",sans-serif;
+  border:none;
+  outline: none;
+  text-decoration: none;
+    text-transform: capitalize;
+}
+body{
+  position: relative;
+  min-height: 100vh;
+  width: 100%;
+  overflow: hidden;
+   background-image: linear-gradient(45deg,#bca89f,#d8cbc4);  
+   background-color: #5e3b29;
+   
+
+}
+.sidebar{
+  position: fixed;
+  top:0;
+  left: 0;
+  height: 100%;
+  width: 20px;
+  background-color: #fff;
+  padding:6px 14px;
+  transition: all 0.5 ease;
+  z-index: 1;
+}
+.sidebar{
+  width: 78px;
+  
+}
+.sidebar.active{
+  width: 300px;
+}
+.sidebar .logo_content .logo{
+  color: #765341;
+  display: flex;
+  height: 50px;
+  width: 100%;
+  align-items: center;
+}
+.logo_content .logo i{
+ 
+  font-size: 28px;
+  margin-right:5px;
+}
+
+.logo_content .logo .logo_name{
+  font-size: 20px;
+  font-weight: 200;
+}
+
+.sidebar #btn{
+  position: absolute;
+  color: #765341;
+  left: 50%;
+  top:6px;
+  font-size:20px;
+  height:30px;
+  width: 100px;
+  text-align:center;
+  line-height:30px;
+  transform:translateX(-50%);
+}
+.sidebar.sidebar.active #btn{
+  left:90%;
+}
+.logo_name{
+  margin-left: 25px;
+}
+
+.sidebar ul{
+  margin-top:20px;
+}
+ 
+.sidebar ul li {
+  position: relative;
+  height: 110px;
+  width: 100%;
+  margin: 0 5px;
+  list-style: none;
+  line-height: 110px;
+  border-radius: 12px;
+}
+.sidebar ul li .tooltip{
+  position:absolute;
+  left: 152px;
+  top:70%;
+  transform: translateY(-50%);
+  border-radius:6px;
+  height: 35px;
+  width: 155px;
+  background-color: #fff;
+  line-height: 40px;
+  text-align: left;
+ box-shadow: 0 5px 10px rgba(167, 32, 32, 0.2);
+ /* font-family: Arial, Helvetica, sans-serif; */
+ font-weight: 10px;
+ transition: 0s;  
+   opacity: 0; 
+  pointer-events: none;
+}
+.sidebar ul li:hover .tooltip {
+  transition:all 0.5s ease;
+  opacity: 1; 
+  top:50%;
+}
+.tooltop{
+  position:absolute;
+  left: 152px;
+  top:70%;
+  transform: translateY(-50%);
+  border-radius:6px;
+  height: 35px;
+  width: 155px;
+  background-color: #fff;
+  line-height: 35px;
+  text-align: center;
+ box-shadow: 0 5px 10px rgba(167, 32, 32, 0.2);
+ /* font-family: Arial, Helvetica, sans-serif; */
+ font-weight: 10px;
+ transition: 0s;  
+   opacity: 0; 
+  pointer-events: none;
+  display: block;
+}
+.sidebar ul li:hover .tooltop{
+  transition:all 0.5s ease;
+  opacity: 1; 
+  top:50%;
+}
+.sidebar.sidebar.active ul li .tooltip{
+  display:none;
+}
+
+
+.sidebar ul li input{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left:0;
+  top:0;
+  border-radius: 12px;
+  outline: none;
+  border:none;
+  background-color: #fff;
+  padding-left: 50px;
+  font-size: 18px;
+  color: #765341;
+}
+
+
+
+.sidebar ul li a{
+  color: #765341;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  transition: all 0.4s ease;
+}
+
+i{
+  font-size: 3.1em;
+}
+
+.sidebar ul li a:hover{
+  color: #fff;
+  background-color: #765341;
+  border-radius: 12px;
+
+}
+.sidebar ul li a i{
+  height:50px;
+  min-width: 20px;
+  border-radius: 12px;
+  line-height: 50px;
+  text-align: center;
+  align-items: center;
+}
+.sidebar .links_name{
+  opacity: 0;
+  pointer-events: none;
+}
+.sidebar.active .links_name{
+  opacity: 1;
+  pointer-events: auto;
+}
+
+#logout{
+  color: #765341;
+
+}
+#logout:hover{
+  color: #fff;
+  background-color: #765341;
+  border-radius: 12px;
+  line-height: 120px;
+
+}
+.logout1{
+  line-height: 110px;
+  align-items: center;
+  text-align: center;
+  top:50%
+  
+}
+input{
+    font-family: "Poppins",sans-serif;
 }
