--- a/HTML/assets/su.css
+++ b/HTML/assets/su.css
@@ -3,7 +3,7 @@
    
     margin:0;
     padding: 0;
-    font-family: "Poppins",sans-serif;
+    font-family:'Bentham', serif ;
     box-sizing:border-box;
     border: none;
     outline: none;
