--- a/HTML/assets/bookdesign.css
+++ b/HTML/assets/bookdesign.css
@@ -208,7 +208,7 @@ i{
 .home_content{
   margin-left:80px;
   position: absolute;
-  height: 100%;
+  height: 90%;
   width: calc(100%-300px);
   left:300px;
 }
@@ -222,7 +222,7 @@ i{
     display: flex;
     background:white;
     width: 700px;
-    height: auto;
+    height: 99%;
     display: block;
     padding:25px;
     margin:10px auto 0;
@@ -275,6 +275,7 @@ i{
       padding: 0 5rem;
       grid-column: 1/2;
       grid-row: 1/2;
+      overflow: auto;
   }
   
   .input-field{
@@ -330,4 +331,17 @@ i{
     background:#e5d3b3;
       color: #765341;
 }
+.cease{
+  height: 50px;
+  position: absolute;
+ 
+}
 
+.center {
+  margin: 0;
+  position: absolute;
+  top: 95%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
