--- a/HTML/assets/style2.css
+++ b/HTML/assets/style2.css
@@ -488,7 +488,15 @@ form{
     color: #aaa;
     font-weight: 500;
 }
-.about .body{
+/* .about .body{
   background-image: linear-gradient(45deg,#bca89f,#d8cbc4);
 
+} */
+
+.change{
+  color:#333;
+
+}
+.size{
+  font-size: 16px;
 }
