--- a/HTML/assets/su.css
+++ b/HTML/assets/su.css
@@ -35,7 +35,7 @@
   grid-template-columns:repeat(3,1fr);
   padding:30px 20px;
   grid-column-gap:30px;
-  grid-row-gap:30px
+  grid-row-gap:30px;
  }
  .items img{
   width:100%;
@@ -47,9 +47,27 @@
  .item img:hover{
   transform:scale(1.04);
  }
+ .item h3{
+  padding:5px;
+  text-align:center;
+ }
  .item h4{
   padding:5px;
   text-align:center;
+ }
+ .item input{
+    
+    margin :0 auto;
+  
+    padding:5px 30px;
+    border:none;
+    outline:none;
+    background-image: linear-gradient(45deg,#9c6644, #8b6c5c);
+    color:white;
+    cursor:pointer;
+    border-radius:4px;
+    display:block;
+  
  }
  .item button{
   padding:5px 30px;
@@ -63,6 +81,7 @@
   margin:0 auto;
   transition:0.2s all;
 }
+
 .item button:hover{
   transform:scale(1.08);
 }
