--- a/HTML/assets/style.css
+++ b/HTML/assets/style.css
@@ -84,7 +84,7 @@ margin-bottom: 26px;
 
 body {
   /* background-color: #328f8a; */
- background-image: linear-gradient(45deg,#bca89f,#d8cbc4);
+ background-color:#f2eee3;
  font-family:'poppins',  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
