--- a/HTML/assets/style2.css
+++ b/HTML/assets/style2.css
@@ -425,7 +425,7 @@ section{
     margin: .7rem 0;
   }
   body{
-    background-image: linear-gradient(45deg,#bca89f,#d8cbc4);
+    background-color: #f2eee3;
 
   }
   .container{
