--- a/HTML/assets/style.css
+++ b/HTML/assets/style.css
@@ -18,14 +18,20 @@ margin-top: 4px;
 float: left;
 }
 .login-page {
-  width: 360px;
+  width: 350px;
   padding: 8% 0 0;
+  margin: auto;
+}
+.register-page {
+  width: 410px;
+  padding: 3% 0 0;
   margin: auto;
 }
 .login-page .form .login{
   margin-top: -31px;
 margin-bottom: 26px;
 }
+
 .form {
   position: relative;
   border-radius: 20px;
@@ -36,7 +42,16 @@ margin-bottom: 26px;
   padding: 45px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgb(122, 119, 119), 0 5px 5px 0 #616161fb;
+  /* padding-top: 2px; */
+  padding-bottom: 2px;
+  
 }
+.form1{
+ padding-top: 2px;
+ padding-bottom: 2px;
+ max-width: 310px;
+}
+
 .form input {
   font-family: "Roboto", sans-serif;
   outline: 0;
