--- a/HTML/assets/1.css
+++ b/HTML/assets/1.css
@@ -15,6 +15,7 @@ body{
     padding-right: 5%;
     padding-bottom: 5%;
     text-decoration: none;
+    border: 1px solid black;
 }
 
 .section img{
