--- a/HTML/assets/yourBooking.css
+++ b/HTML/assets/yourBooking.css
@@ -90,18 +90,25 @@ a.button:active {
     color: #79b0a1;
 }
 
-.header{
+.header {
     position: fixed;
-    top: 0%;left:0;right:0;
-    display:flex;
+    position: fixed;
+    top: 0%;
+    left: 0;
+    right: 0;
+    display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index:1000;
-    background:#fff;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0, .1);
-    padding: 0.8% 3%;
+    z-index: 1000;
+    background-color: #e5d5af;
+    /* box-shadow: 0 .5rem 1rem rgba(0,0,0, .1); */
+    padding: 0.6% 3%;
+    /* border: 4px; */
+    /* box-shadow: 3px 3px hotpink; */
+    color: #5e3b29;
+    text-align: center;
 }
 
-#main{
+#main {
     margin-top: 130px;
 }
