--- a/HTML/assets/userProfile.css
+++ b/HTML/assets/userProfile.css
@@ -45,7 +45,7 @@ body {
   float: left;
   height: 250px;
   width: 227px;
-  border-radius: 0 7px 10px 7px;
+  border-radius: 0 7px 10px 0;
   background-color: #ffffff;
 }
 
