--- a/HTML/assets/yourBooking.css
+++ b/HTML/assets/yourBooking.css
@@ -1,96 +1,156 @@
-body {
-    margin: 0;
+/* .container{
+    max-width:1200px;
+    margin:0 auto;
+    padding:1.5rem;
+  }
+   */
+   .menu {
     font-family: 'Bentham', serif;
-    font-size: 18px;
-    background-color: #f2eee3;
-}
-
-.selection {
-    background-color: #ebe6f7;
+    font-size: 14px;
+  }
+  
+  .menu-item {
     display: flex;
-    justify-content: center;
-    padding: 50px;
-    width: 60%;
-    margin: 03rem auto 0 auto;
-    padding-left: 5%;
-    padding-top: 5%;
-    padding-right: 5%;
-    padding-bottom: 5%;
-    text-decoration: none;
-    border: 1px solid black;
-}
-
-.selection img {
-    width: 50%;
-    margin: 30px;
-    text-decoration: none;
-}
-
-.selection h3 {
-    color: black;
-    margin-left: 05%;
-    text-decoration: none;
-
-}
-
-.selection h2 {
-    color: black;
-    margin-left: 05%;
-    text-decoration: none;
-}
-
-.selection p {
-    color: black;
-    margin-left: 10%;
-    text-decoration: none;
-}
-
-
-
-a.button {
-    display: inline-block;
-    padding: 0.2em 1.45em;
-    margin: 0.1em;
-    border: 0.15em solid #CCCCCC;
-    box-sizing: border-box;
-    text-decoration: none;
+    margin-top: 100px
+  }
+  
+  
+  body {
+    background-color: #f2eee3;
+  }
+  
+  .wrapper {
+    float: left;
+    height: 350px;
+    width: 554px;
+    margin: 5px 20px -41px 25px;
+    border-radius: 7px 7px 7px 7px;
+    /* -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15); */
+    /* -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15); */
+    /* box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15); */
+    
+  }
+  
+  .product-img {
+    float: left;
+    height: 420px;
+    width: 327px;
+  }
+  
+  
+  .product-img img {
+    border-radius: 7px 0 0 7px;
+  }
+  
+  .product-info {
+    float: left;
+    height: 278px;
+    width: 227px;
+    border-radius: 0 7px 10px 0;
+    background-color: #ffffff;
+  }
+  
+  .product-text {
+    height: 200px;
+    width: 227px;
+  }
+  
+  .product-text h1 {
+    margin: 0 0 0 38px;
+    padding-top: 10px;
+    font-size: 34px;
+    color: #474747;
+  }
+  
+  .product-text h1,
+  .product-price-btn p {
+    font-family: 'Bentham', serif;
+  }
+  
+  .product-text h2 {
+    margin: 0 0 17px 38px;
+    font-size: 13px;
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
-    color: #fff;
-    background-color: #79b0a1;
-    text-align: center;
+    text-transform: uppercase;
+    color: #d2d2d2;
+    letter-spacing: 0.2em;
+  }
+  
+  .product-text b {
+    color: black;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  
+  .product-text p {
+    height: 32px;
+    margin: 0 0 0 28px;
+    font-family: 'Playfair Display', serif;
+    color: #8d8d8d;
+    line-height: 1.7em;
+    font-size: 17px;
+    font-weight: lighter;
+    overflow: hidden;
+  }
+  
+  .product-price-btn {
+    float: right;
+    padding-right: 20px;
+    height: 95px;
+    width: 300px;
+    margin-top: 8px;
     position: relative;
-    border-radius: 25px;
+  }
+  
+  .product-price-btn p {
+    padding-top: 20px;
+    display: inline-block;
+    position: absolute;
+    top: -13px;
+    height: 50px;
+    font-family: 'Trocchi', serif;
+    margin: 0 0 0 38px;
+    font-size: 28px;
+    font-weight: lighter;
+    color: #474747;
+  }
+  
+  .product-price-btn button {
+    float: right;
+    display: inline-block;
+    height: 40px;
+    /* width: 100px; */
+    /* margin: 0 40px 0 16px; */
+    box-sizing: border-box;
+    border: transparent;
+    border-radius: 60px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    color: #ffffff;
+    background-color: #9cebd5;
+    cursor: pointer;
     outline: none;
-    margin-top: 25px;
-}
+    margin-top: 15px;
 
-a.button:hover {
-    border-color: #7a7a7a;
-    text-decoration: none;
-}
-
-a.button:active {
-    background-color: #999999;
-    text-decoration: none;
-}
-
-@media all and (max-width:30em) {
-    a.button {
-        display: block;
-        margin: 0.2em auto;
-        text-decoration: none;
-    }
-}
-
-.close {
-    font-size: 45px;
-    font-weight: 600;
-    text-decoration: none;
-    color: #79b0a1;
-}
-
-.header {
+  }
+  
+  .product-price-btn button:hover {
+    background-color: #79b0a1;
+  }
+  
+  .header {
+    /* position: fixed;
+          top: 0%;left:0;right:0;
+          display:flex;
+          align-items: center;
+          justify-content: space-between;
+          z-index:1000;
+          background:#fff;
+          box-shadow: 0 .5rem 1rem rgba(0,0,0, .1);
+          padding: 0.8% 3%; */
     position: fixed;
     position: fixed;
     top: 0%;
@@ -103,12 +163,19 @@ a.button:active {
     background-color: #e5d5af;
     /* box-shadow: 0 .5rem 1rem rgba(0,0,0, .1); */
     padding: 0.6% 3%;
-    /* border: 4px; */
-    /* box-shadow: 3px 3px hotpink; */
+    /* border: 4px solid pink;
+    box-shadow: 3px 3px hotpink; */
     color: #5e3b29;
     text-align: center;
-}
-
-#main {
-    margin-top: 130px;
-}
+  }
+  
+  /* .header .logo{
+          color:var(--main-color);
+          font-size: 2.3rem;
+          float: left;
+          margin-right: auto;
+      } */
+  /* .header .logo i{
+          padding-left: .5rem;
+          margin-right: auto;
+      } */
